# NotePied

./: .gitignore  CMakeLists.txt  NotePied.desktop  README.md  build-appimage-fixed.sh  build-appimage-qt5.sh  build-appimage-simple.sh  build-appimage.sh  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
AppDir/: AppRun
NotePied.AppDir/: .DirIcon  AppRun
NotePied.AppDir/usr/share/applications/: NotePied.desktop
